blog structure modify for link

--- a/_posts/code/2025-08-09-Python集合.md
+++ b/_posts/code/2025-08-09-Python集合.md
@@ -295,8 +295,8 @@ d2 = defaultdict(lambda: [0])
 
    * 因为能在头尾插入/删除键值对，所以它常用来实现：
 
-     * [**LRU 缓存**（最近最少使用）](/posts/字典树_LRU_并查集/#lru)
-     * **FIFO 队列**（先进先出映射）
+     * [**LRU 缓存**（最近最少使用）](/posts/LRU/)
+     * [**FIFO 队列**（先进先出映射）](/posts/栈与队列/#队列)
 
 ---
 
