basic algo skills

--- a/_posts/01_Algorithms/2024-02-14-二分查找.md
+++ b/_posts/01_Algorithms/2024-02-14-二分查找.md
@@ -7,14 +7,15 @@ math: true
 layout: post
 ---
 
+二分查找（Binary Search）是算法中非常经典的一种技巧，适用于在**有序数据**中快速定位目标，时间复杂度为 $O(\log n)$。
 虽然二分查找的基本思想相对简单，但其细节却可能出人意料地棘手。
 
 ## 基本概念
 
-二分查找（Binary Search）是算法中非常经典的一种技巧，适用于在**有序数据**中快速定位目标，时间复杂度为 $O(\log n)$。
+**二分查找的注意事项**
 
-二分查找使用时，需注意：
 1. 查找**区间有序**。
+
 2. 防止**加法溢出**，也就是说加法的结果大于整型能够表示的范围。
    > **mid = (right + left) / 2**; 这种情况可能出现加法溢出，即和超出int范围。
    >
@@ -23,16 +24,35 @@ layout: post
    > 当然，除以2可以用右移一位代替，也是官方推荐：**mid = left + (right - left) >> 1**
    >
    > 更高级，防止减法溢出：**mid = (left + right） \>>> 1**
+   
 3. **使用else if**。对于初学者，不要出现else，而是把所有情况用else if写清楚，这样可以清楚地展现所有细节。
+
 4. **查找区间：**
    - **闭区间 `[left, right]`**：左右两端都包含。
    - **开区间 `(left, right)`**：左右都不包含。
    - **半开区间 `[left, right)`**：左闭右开，包含左端不包含右端。
+
 5. **循环不变量**：在每次循环迭代开始时始终成立的条件。它能帮我们：
    - 保证算法逻辑正确；
    - 推导边界行为；
    - 明确终止条件；
    - 写出更通用和不出错的代码。
+
+---
+
+**二分查找的常见变体**
+
+1. **左边界/右边界查找**
+   * 查找数组中第一个大于等于目标的元素
+   * 查找数组中最后一个小于等于目标的元素
+
+2. **精确查找 vs 范围查找**
+   * 精确查找目标值
+   * 查找满足某种条件的最大/最小值（如“最小满足条件的值”）
+
+3. **应用场景**
+   * 有序数组/矩阵查找
+   * 问题转化为「判定函数」的最值问题（如二分答案）
 
 ---
 
@@ -304,8 +324,6 @@ def right_bound_open(nums, target):
 
 ## 知识点总结
 
-[参考资料](https://leetcode.cn/problems/search-insert-position/solutions/2023391/er-fen-cha-zhao-zong-shi-xie-bu-dui-yi-g-nq23/)
-
 ### 循环不变量
 
 理解**二分查找的「循环不变量（Loop Invariant）」**，是掌握各种变形模板的核心，能帮你理清为什么某些写法必须用 `ans`、为什么某些不能 `mid-1` 或 `mid+1`。
@@ -495,11 +513,36 @@ right_bound(target) = left_bound(target + 1) - 1
 
 ---
 
+### Python 内置API
+
+Python 标准库提供了 `bisect` 模块，支持二分查找和插入操作，非常适合处理**有序列表**：
+
+* `bisect_left(arr, x)`：返回 **第一个不小于 x 的位置**（即 `arr[i] >= x` 的最小 `i`）
+* `bisect_right(arr, x)`：返回 **第一个大于 x 的位置**（即 `arr[i] > x` 的最小 `i`）
+
+```python
+import bisect
+
+arr = [1, 3, 3, 5, 7]
+
+# 查找目标值应该插入的位置（保持有序）
+pos_left = bisect.bisect_left(arr, 3)   # 返回 1，左边界
+pos_right = bisect.bisect_right(arr, 3)  # 返回 3，非右边界，而是 第一个大于 x 的位置
+```
+
+> **如何获取最后一个等于 `x` 的元素下标？**
+> 
+> * 方法一：`right_index = bisect.bisect_right(arr, x) - 1`
+> * 方法二：`right_index = bisect.bisect_left(arr, x+1) - 1` 
+
+---
+
 ## 经典例题
 
-| 题号 | 题目                                                             | 标签              |
-| -- | -------------------------------------------------------------- | --------------- |
-| 35 | [搜索插入位置](https://leetcode.cn/problems/search-insert-position/) | 模板题      |
-| 74 | [搜索二维矩阵](https://leetcode.cn/problems/search-a-2d-matrix/)     | 矩阵 / 模板题 |
+| 题号 | 题目                                                                                                             | 标签                |
+| -- | -------------------------------------------------------------------------------------------------------------- | ----------------- |
+| 34 | [在排序数组中查找元素的第一个和最后一个位置](https://leetcode.cn/problems/find-first-and-last-position-of-element-in-sorted-array/) | 二分查找 / 边界查找 / 提升题 |
+| 35 | [搜索插入位置](https://leetcode.cn/problems/search-insert-position/)                                                 | 二分查找 / 模板题        |
+| 74 | [搜索二维矩阵](https://leetcode.cn/problems/search-a-2d-matrix/)                                                     | 二分查找 / 矩阵 / 模板题   |
 
 ---
