--- a/_posts/02_DataStructures/2024-01-23-堆(优先级队列).md
+++ b/_posts/02_DataStructures/2024-01-23-堆(优先级队列).md
@@ -35,7 +35,7 @@ layout: post
 
 ---
 
-### Python的`heapq`
+### Python 的 `heapq`
 
 * 默认实现的是**小顶堆**
 * 若需大顶堆：插入元素时取负值 `-x`，取出时再取负
@@ -183,7 +183,7 @@ top():
 
 ---
 
-### 堆排序算法
+### 手撕堆排序算法
 
 堆排序利用堆的性质来进行排序，时间复杂度为 `O(n log n)`，不稳定排序。
 
@@ -227,13 +227,97 @@ def heap_sort(nums):
         heapify(nums, i, 0)
 ```
 
+---
+
+### 数据流的中位数
+
+设计一个数据结构，支持动态地向数据流中插入数字，并能在任意时刻求出中位数。
+
+要求：
+
+* 支持高效插入（O(log n)）
+* 支持高效查询中位数（O(1)）
+
+接口示例：
+
+```python
+addNum(num: int) -> None
+findMedian() -> float
+```
+
+---
+
+**核心思路：双堆（最大堆 + 最小堆）**
+
+中位数将数据分为两半：
+
+* 左半部分：所有数字 ≤ 中位数
+* 右半部分：所有数字 ≥ 中位数
+
+因此我们可以用：
+
+* **最大堆（left）**：保存较小的一半，堆顶为左边最大值；
+* **最小堆（right）**：保存较大的一半，堆顶为右边最小值。
+
+保持这两个堆平衡：
+
+* `len(left)` 与 `len(right)` 之差不超过 1 ，在有奇数个数时，left 比 right 多 1 个数。
+* 保证 `max(left) <= min(right)`
+
+这样：
+
+* 若总数为奇数 → 中位数是 left 的堆顶。
+* 若为偶数 → 中位数为两堆堆顶的平均值。
+
+---
+
+**示意图**：
+
+> Python中，默认为小顶堆；大顶堆通过存元素的负数值来设计。
+
+```
+左堆（最大堆）     右堆（最小堆）
+[-3, -2, -1]     [4, 5, 6]
+  ↑               ↑
+最大值            最小值
+```
+
+中位数 = (3 + 4) / 2 = 3.5
+
+---
+
+**代码实现（Python）**
+
+```python
+import heapq
+
+class MedianFinder:
+    def __init__(self):
+        self.left = []  # 入堆的元素取相反数，变成最大堆
+        self.right = []  # 最小堆
+
+    def addNum(self, num: int) -> None:
+        if len(self.left) == len(self.right):
+            heappush(self.left, -heappushpop(self.right, num))
+        else:
+            heappush(self.right, -heappushpop(self.left, -num))
+
+    def findMedian(self) -> float:
+        if len(self.left) > len(self.right):
+            return -self.left[0]
+        return (self.right[0] - self.left[0]) / 2
+```
+
+---
+
 ### 经典例题
 
-| 题号   | 题目                                                                                                | 标签      |
-| ---- | ------------------------------------------------------------------------------------------------- | ------- |
-| 1353 | [最多可以参加的会议数目](https://leetcode.cn/problems/maximum-number-of-events-that-can-be-attended/)        | 贪心/堆    |
-| 2163 | [删除元素后和的最小差值](https://leetcode.cn/problems/minimum-difference-in-sums-after-removal-of-elements/) | 贪心/堆    |
-| 2349 | [设计数字容器系统](https://leetcode.cn/problems/design-a-number-container-system/)                        | 懒删除堆/设计 |
-| 3408 | [设计任务管理器](https://leetcode.cn/problems/design-task-manager/)                                      | 懒删除堆/设计 |
+| 题号   | 题目                                                                                                | 标签              |
+| ---- | ------------------------------------------------------------------------------------------------- | --------------- |
+| 1353 | [最多可以参加的会议数目](https://leetcode.cn/problems/maximum-number-of-events-that-can-be-attended/)        | 贪心 / 堆 / 模板题    |
+| 2163 | [删除元素后和的最小差值](https://leetcode.cn/problems/minimum-difference-in-sums-after-removal-of-elements/) | 贪心 / 堆 / 提升题    |
+| 2349 | [设计数字容器系统](https://leetcode.cn/problems/design-a-number-container-system/)                        | 懒删除堆 / 设计 / 提升题 |
+| 3408 | [设计任务管理器](https://leetcode.cn/problems/design-task-manager/)                                      | 懒删除堆 / 设计 / 提升题 |
+| 295  | [数据流的中位数](https://leetcode.cn/problems/find-median-from-data-stream/)                             | 双堆 / 数据流 / 模板题  |
 
 ---
