--- a/_posts/02_DataStructures/2024-03-23-字典树.md
+++ b/_posts/02_DataStructures/2024-03-23-字典树.md
@@ -7,15 +7,11 @@ math: true
 layout: post
 ---
 
-**字典树（Trie，又称前缀树、单词查找树）** 是一种高效的字符串存储与搜索数据结构。
-它的核心思想是：
+字典树（Trie，又称前缀树、单词查找树） 是一种高效的字符串存储与搜索数据结构。
 
-> **利用字符串的公共前缀来节省存储空间和加速搜索过程。**
-
-换句话说，不是为每个字符串单独保存一条完整路径，而是让它们在公共前缀处共享节点。
+它的核心思想是： 利用字符串的公共前缀来节省存储空间和加速搜索过程。换句话说，不是为每个字符串单独保存一条完整路径，而是让它们在公共前缀处共享节点。
 
 ---
-
 
 ## 结构示意
 
@@ -255,9 +251,9 @@ class Trie:
 
 ## 经典例题
 
-| 题号  | 题目                                                                        | 标签                    |
-| --- | ------------------------------------------------------------------------- | --------------------- |
-| 208 | [实现 Trie (前缀树)](https://leetcode.cn/problems/implement-trie-prefix-tree/) | 模板题      |
-| 677 | [键值映射](https://leetcode.cn/problems/map-sum-pairs/)                       | 映射 / 提升题 |
+| 题号  | 题目                                                                        | 标签               |
+| --- | ------------------------------------------------------------------------- | ---------------- |
+| 208 | [实现 Trie (前缀树)](https://leetcode.cn/problems/implement-trie-prefix-tree/) | Trie / 字典树 / 模板题 |
+| 677 | [键值映射](https://leetcode.cn/problems/map-sum-pairs/)                       | Trie / 映射 / 提升题  |
 
 ---
