--- a/_posts/01_Algorithms/2024-02-22-哈希表_滑动窗口.md
+++ b/_posts/01_Algorithms/2024-02-22-哈希表_滑动窗口.md
@@ -1,5 +1,5 @@
 ---
-title: "高效算法：哈希表/双指针/滑动窗口"
+title: "高效算法：哈希表与滑动窗口"
 categories: [01_Algorithms]
 tags: [algorithm]
 
@@ -84,45 +84,12 @@ for key, value in hash_map.items():
 ---
 
 ### 经典例题
-- [128. 最长连续序列](https://leetcode.cn/problems/longest-consecutive-sequence/)
-- [966. 元音拼写检查器](https://leetcode.cn/problems/vowel-spellchecker/)
-- 【有序集合】[1912. 设计电影租借系统](https://leetcode.cn/problems/design-movie-rental-system/)
 
----
-
-## 双指针
-
-双指针是一种常用于处理 **线性结构（如数组、字符串、链表）** 的算法技巧，它通过维护两个指针的位置关系来简化遍历、查找、排序等操作。
-
-**常见的双指针模式：**
-
-| 模式名称                    | 指针方向                                | 应用场景          |
-| ----------------------- | ----------------------------------- | ------------- |
-| 对撞指针（Opposite Pointers） | 一个从头，一个从尾，向中间逼近                     | 判断回文、两数之和     |
-| 同向指针（Sliding Window）    | 两个指针都从头开始，`right` 向右扩张，`left` 条件下缩小 | 子数组、最长子串、频率窗口 |
-| 快慢指针（Fast & Slow）       | 一快一慢，常用于链表                          | 判环、找中点        |
-
-**主要用途：**
-
-* 使用两个指针同时在数组或链表上移动，常用于线性遍历和查找。
-* 通过指针移动的配合，实现效率更高的搜索、匹配或合并操作。
-
-**双指针应用场景与题型：**
-
-| 场景             | 举例                 | 技巧        |
-| -------------- | ------------------ | --------- |
-| 数组中找一对/多对数满足条件 | 两数之和 II、三数之和       | 排序 + 对撞指针 |
-| 子串/子数组满足条件     | 最小覆盖子串、最长不重复子串     | 同向滑动窗口    |
-| 链表操作           | 判断环、倒数第 K 个节点、快慢合并 | 快慢指针      |
-| 移除元素           | 原地覆盖、排序数组去重        | 双指针拷贝     |
-| 模拟归并排序         | 合并两个有序数组           | 双数组双指针    |
-
----
-
-### 经典例题
-- [15. 三数之和](https://leetcode.cn/problems/3sum/)
-- [11. 盛最多水的容器](https://leetcode.cn/problems/container-with-most-water/)
-- [42. 接雨水](https://leetcode.cn/problems/trapping-rain-water/)
+| 题号   | 题目                                                                   | 标签              |
+| ---- | -------------------------------------------------------------------- | --------------- |
+| 128  | [最长连续序列](https://leetcode.cn/problems/longest-consecutive-sequence/) | 哈希 / 数组 / 模板题   |
+| 966  | [元音拼写检查器](https://leetcode.cn/problems/vowel-spellchecker/)          | 哈希 / 字符串 / 提升题  |
+| 1912 | [设计电影租借系统](https://leetcode.cn/problems/design-movie-rental-system/) | 有序集合 / 设计 / 提升题 |
 
 ---
 
@@ -156,9 +123,12 @@ for key, value in hash_map.items():
 ---
 
 ### 经典例题
-- [438. 找到字符串中所有字母异位词](https://leetcode.cn/problems/find-all-anagrams-in-a-string/)
-- [3439. 重新安排会议得到最多空余时间 I](https://leetcode.cn/problems/reschedule-meetings-for-maximum-free-time-i/)
-- [3634. 使数组平衡的最少移除数目](https://leetcode.cn/problems/minimum-removals-to-balance-array/)
-- [1493. 删掉一个元素以后全为 1 的最长子数组](https://leetcode.cn/problems/longest-subarray-of-1s-after-deleting-one-element/)
+
+| 题号   | 题目                                                                                                     | 标签               |
+| ---- | ------------------------------------------------------------------------------------------------------ | ---------------- |
+| 438  | [找到字符串中所有字母异位词](https://leetcode.cn/problems/find-all-anagrams-in-a-string/)                           | 滑动窗口 / 字符串 / 模板题 |
+| 3439 | [重新安排会议得到最多空余时间 I](https://leetcode.cn/problems/reschedule-meetings-for-maximum-free-time-i/)          | 排序 / 贪心 / 提升题    |
+| 3634 | [使数组平衡的最少移除数目](https://leetcode.cn/problems/minimum-removals-to-balance-array/)                        | 贪心 / 哈希 / 提升题    |
+| 1493 | [删掉一个元素以后全为 1 的最长子数组](https://leetcode.cn/problems/longest-subarray-of-1s-after-deleting-one-element/) | 滑动窗口 / 数组 / 提升题  |
 
 ---
