--- a/_posts/01_Algorithms/2025-04-21-图论.md
+++ b/_posts/01_Algorithms/2025-04-21-图论.md
@@ -177,6 +177,121 @@ def bfs(graph, u):
 
 ---
 
+## 图的染色与判定
+
+### 基本概念
+
+在图论中，**图的染色（Graph Coloring）** 是一种为图的每个节点分配颜色的操作，使得：
+
+> **相邻节点颜色不同。**
+
+染色问题常用于：
+
+* 判断图的结构特性（如是否为二分图）
+* 模型冲突约束问题（如任务分配、对立关系等）
+
+---
+
+**二分图的定义**
+
+> **二分图（Bipartite Graph）** 是指：
+> 能将所有节点分为两个不相交的集合 ( A ) 和 ( B )，
+> 使得图中每条边的两个端点分别属于不同集合。
+
+换句话说：
+
+> 图中不存在**奇数长度的环**。
+
+---
+
+**判定思路（DFS / BFS 染色法）**
+
+二分图判定的本质是一个 **图染色问题**：
+
+* 使用两种颜色（如 0 和 1）为节点染色；
+* 若在染色过程中发现相邻节点颜色相同 → 图不是二分图。
+
+可用 **DFS 或 BFS** 完成染色。
+
+**算法原理**
+
+1. 对每个未访问节点开始染色（处理非连通图）。
+2. 初始颜色设为 0。
+3. 遍历所有相邻节点：
+
+   * 若未染色 → 染成相反颜色；
+   * 若已染色但颜色相同 → 返回 `False`（存在奇环）。
+4. 所有节点染色成功 → 返回 `True`。
+
+---
+
+### Python 实现
+
+DFS 版
+
+```python
+def is_bipartite(graph):
+    """
+    graph: 邻接表，例如 {0:[1,3], 1:[0,2], 2:[1,3], 3:[0,2]}
+    返回：是否为二分图
+    """
+    n = len(graph)
+    color = [-1] * n  # -1 表示未染色，0/1 表示两种颜色
+
+    def dfs(u, c):
+        color[u] = c
+        for v in graph[u]:
+            if color[v] == -1:
+                if not dfs(v, 1 - c):  # 染相反色
+                    return False
+            elif color[v] == c:
+                return False  # 相邻同色 → 非二分图
+        return True
+
+    for i in range(n):
+        if color[i] == -1:  # 避免非连通图漏判
+            if not dfs(i, 0):
+                return False
+    return True
+```
+
+BFS 版
+
+```python
+from collections import deque
+
+def is_bipartite_bfs(graph):
+    n = len(graph)
+    color = [-1] * n
+    for i in range(n):
+        if color[i] != -1:
+            continue
+        queue = deque([i])
+        color[i] = 0
+
+        while queue:
+            u = queue.popleft()
+            for v in graph[u]:
+                if color[v] == -1:
+                    color[v] = 1 - color[u]
+                    queue.append(v)
+                elif color[v] == color[u]:
+                    return False
+    return True
+```
+
+---
+
+### 经典例题
+
+| 题号   | 题目                                                                       | 思路                 |
+| ---- | ------------------------------------------------------------------------ |--------------------|
+| 785  | [判断二分图](https://leetcode.cn/problems/is-graph-bipartite/)                | BFS / DFS 染色 / 模板题 |
+| 886  | [可能的二分法](https://leetcode.cn/problems/possible-bipartition/)             | 二分图建模 / 染色         |
+| 1042 | [不相邻的花园](https://leetcode.cn/problems/flower-planting-with-no-adjacent/) | 贪心 / 图染色           |
+
+---
+
 ## 拓扑排序
 
 **拓扑排序**（Topological Sorting）是对一个**有向无环图**（DAG）中的节点进行排序，使得对于图中每一条有向边 $u \rightarrow v$，节点 $u$ 都排在 $v$ 前面。
