basic algo skills 1112

--- a/_posts/01_Algorithms/2024-02-21-双指针.md
+++ b/_posts/01_Algorithms/2024-02-21-双指针.md
@@ -221,11 +221,12 @@ class Solution:
 
 ### 经典例题
 
-| 题号   | 题目                                                                                                      | 标签              |
-| ---- | ------------------------------------------------------------------------------------------------------- | --------------- |
-| 11   | [盛最多水的容器](https://leetcode.cn/problems/container-with-most-water/)                                      | 双指针 / 贪心 / 模板题  |
-| 42   | [接雨水](https://leetcode.cn/problems/trapping-rain-water/)                                                | 单调栈 / 双指针 / 模板题 |
-| 26   | [删除有序数组中的重复项](https://leetcode.cn/problems/remove-duplicates-from-sorted-array/)                        | 双指针 / 数组 / 模板题  |
-| 2273 | [移除字母异位词后的结果数组](https://leetcode.cn/problems/find-resultant-array-after-removing-anagrams/description/) | 双指针 / 字符串 / 提升题 |
+| 题号   | 题目                                                                                                      | 标签               |
+| ---- | ------------------------------------------------------------------------------------------------------- |------------------|
+| 11   | [盛最多水的容器](https://leetcode.cn/problems/container-with-most-water/)                                      | 双指针 / 贪心 / 模板题   |
+| 42   | [接雨水](https://leetcode.cn/problems/trapping-rain-water/)                                                | 单调栈 / 双指针 / 模板题  |
+| 26   | [删除有序数组中的重复项](https://leetcode.cn/problems/remove-duplicates-from-sorted-array/)                        | 双指针 / 数组 / 模板题   |
+| 2273 | [移除字母异位词后的结果数组](https://leetcode.cn/problems/find-resultant-array-after-removing-anagrams/description/) | 双指针 / 字符串 / 提升题  |
+| 3347 | [执行操作后元素的最高频率 II](https://leetcode.cn/problems/maximum-frequency-of-an-element-after-performing-operations-ii/) | 同向三指针 / 差分 / 提升题 |
 
 ---
