--- a/_posts/01_Algorithms/2025-01-21-回溯.md
+++ b/_posts/01_Algorithms/2025-01-21-回溯.md
@@ -9,15 +9,13 @@ layout: post
 
 **回溯**（backtracking）是暴力搜索法中的一种。
 
-## 如何理解回溯法
-
 对于某些计算问题而言，回溯法是一种可以找到所有（或一部分）解的一般性算法，尤其适用于约束满足问题。
 
 在解决约束满足问题时，我们逐步构造更多的候选解，并且在确定某一部分候选解不可能补全成正解之后放弃继续搜索这个部分候选解本身及其可以拓展出的子候选解，转而测试其他的部分候选解。
 
 ---
 
-## 基本思想
+## 基本概念
 
 回溯法解决的问题都可以抽象为树形结构！集合的大小就构成了树的宽度，递归的深度就构成了树的深度。
 
@@ -29,7 +27,7 @@ layout: post
 
 ---
 
-## 求解步骤
+**求解步骤**
 
 1. 针对所有问题，首先应明确定义问题的解空间，问题的解空间应至少包含问题的一个（最优）解。
 
@@ -39,9 +37,9 @@ layout: post
 
 ---
 
-## 算法框架
+**算法框架**
 
-**实际上，回溯算法就是一个N叉树的前序遍历加上后续遍历而已。**
+实际上，回溯算法就是一个N叉树的前序遍历加上后续遍历而已。
 
 同时，回溯算法是有模板的。用递归表示N叉树的深度遍历，在每次深度遍历的过程中，又横向遍历每一层所有的条件。
 
@@ -89,7 +87,7 @@ def backtrack(choiceList, track, answer):
 
 ---
 
-## 回溯法解决的问题
+**回溯法解决的问题**
 
 回溯法，一般可以解决如下几种问题：
 * 组合问题：N个数里面按一定规则找出k个数的集合
@@ -100,9 +98,9 @@ def backtrack(choiceList, track, answer):
 
 --- 
 
-### 组合问题
+## 组合问题
 
-#### [77. 组合](https://leetcode.cn/problems/combinations/)
+### [77. 组合](https://leetcode.cn/problems/combinations/)
 
 ```markdown
 给定两个整数 n 和 k，返回 1 ... n 中所有可能的 k 个数的组合。你可以按 任何顺序 返回答案。
@@ -132,7 +130,7 @@ class Solution:
 
 ---
 
-#### [216. 组合总和 III](https://leetcode.cn/problems/combination-sum-iii/)
+### [216. 组合总和 III](https://leetcode.cn/problems/combination-sum-iii/)
 
 ```markdown
 找出所有相加之和为 n 的 k 个数的组合。组合中只允许含有 1 - 9 的正整数，并且每种组合中不存在重复的数字。
@@ -169,7 +167,7 @@ class Solution:
 
 ---
 
-#### [17.电话号码的字母组合](https://leetcode.cn/problems/letter-combinations-of-a-phone-number/)
+### [17.电话号码的字母组合](https://leetcode.cn/problems/letter-combinations-of-a-phone-number/)
 
 ```markdown
 给定一个仅包含数字 2-9 的字符串，返回所有它能表示的字母组合。
@@ -205,7 +203,8 @@ class Solution:
 
 ---
 
-#### 前三题小结
+### 前三题小结
+
 重点：回溯算法中，层次遍历的集合处理细节。
 
 上述题77和题216中，针对同一个集合选择不同的组合。当第一轮遍历（深度遍历）后，第二轮遍历所选择的元素不能与第一轮相同，所以，第二轮的层次遍历的索引，需额外处理，避免与上一轮重复。
@@ -221,7 +220,7 @@ class Solution:
 
 ---
 
-#### [39. 组合总和](https://leetcode.cn/problems/combination-sum/)
+### [39. 组合总和](https://leetcode.cn/problems/combination-sum/)
 
 ```markdown
 给定一个无重复元素的数组 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。
@@ -267,7 +266,7 @@ class Solution:
 
 ---
 
-#### [40. 组合总和 II](https://leetcode.cn/problems/combination-sum-ii/)
+### [40. 组合总和 II](https://leetcode.cn/problems/combination-sum-ii/)
 
 ```markdown
 给定一个数组 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。
@@ -361,9 +360,9 @@ class Solution:
 
 ---
 
-### 切割问题
+## 切割问题
 
-#### [131. 分割回文串](https://leetcode.cn/problems/palindrome-partitioning/)
+### [131. 分割回文串](https://leetcode.cn/problems/palindrome-partitioning/)
 
 ```markdown
 给定一个字符串 s，将 s 分割成一些子串，使每个子串都是回文串。
@@ -403,7 +402,7 @@ class Solution:
 
 ---
 
-#### [93. 复原IP地址](https://leetcode.cn/problems/restore-ip-addresses/)
+### [93. 复原IP地址](https://leetcode.cn/problems/restore-ip-addresses/)
 
 ```markdown
 给定一个只包含数字的字符串，复原它并返回所有可能的 IP 地址格式。
@@ -451,9 +450,9 @@ class Solution:
 
 ---
 
-### 子集问题
+## 子集问题
 
-#### [78. 子集](https://leetcode.cn/problems/subsets/)
+### [78. 子集](https://leetcode.cn/problems/subsets/)
 
 ```markdown
 给定一组不含重复元素的整数数组 nums，返回该数组所有可能的子集（幂集）。
@@ -483,7 +482,7 @@ class Solution:
 
 ---
 
-#### [90. 子集 II](https://leetcode.cn/problems/subsets-ii/)
+### [90. 子集 II](https://leetcode.cn/problems/subsets-ii/)
 
 ```markdown
 给定一个可能包含重复元素的整数数组 nums，返回该数组所有可能的子集（幂集）。
@@ -519,7 +518,7 @@ class Solution:
 
 ---
 
-#### [491.递增子序列](https://leetcode.cn/problems/non-decreasing-subsequences/)
+### [491.递增子序列](https://leetcode.cn/problems/non-decreasing-subsequences/)
 
 ```markdown
 给定一个整型数组, 你的任务是找到所有该数组的递增子序列，递增子序列的长度至少是2。
@@ -557,9 +556,9 @@ class Solution:
 
 ---
 
-### 排列问题
+## 排列问题
 
-#### [46. 全排列](https://leetcode.cn/problems/permutations/)
+### [46. 全排列](https://leetcode.cn/problems/permutations/)
 
 ```markdown
 给定一个 没有重复 数字的序列，返回其所有可能的全排列。
@@ -597,7 +596,7 @@ class Solution:
 
 ---
 
-#### [47. 全排列 II](https://leetcode.cn/problems/permutations-ii/)
+### [47. 全排列 II](https://leetcode.cn/problems/permutations-ii/)
 
 ```markdown
 给定一个可包含重复数字的序列 nums ，按任意顺序 返回所有不重复的全排列。
@@ -670,7 +669,7 @@ class Solution:
 
 ---
 
-### 重复元素问题总结
+## 重复元素问题总结
 
 - 在问题[40-组合总和-II](#40-组合总和-ii)中，提供两种方法进行去重。
   - startIndex关系（推荐）。对树层进行去重，对于同一层，如果当前访问的元素刚刚访问过，则跳过访问，达到“去重”的效果。
@@ -682,9 +681,9 @@ class Solution:
 
 ---
 
-### “二维”回溯
+## “二维”回溯
 
-#### [51. N皇后](https://leetcode.cn/problems/n-queens/)
+### [51. N皇后](https://leetcode.cn/problems/n-queens/)
 
 ```markdown
 n 皇后问题 研究的是如何将 n 个皇后放置在 n×n 的棋盘上，并且使皇后彼此之间不能相互攻击。
@@ -743,7 +742,7 @@ class Solution:
 
 ---
 
-#### [37. 解数独](https://leetcode.cn/problems/sudoku-solver/)
+### [37. 解数独](https://leetcode.cn/problems/sudoku-solver/)
 
 ```markdown
 编写一个程序，通过填充空格来解决数独问题。
@@ -790,7 +789,9 @@ class Solution:
 
 ---
 
-### 其他问题
+## 图论中的回溯思想
+
+题目是关于【图论中的欧拉路径问题】，标准解法是【Hierholzer算法】，但是需要领悟其中涉及的回溯思想。
 
 [332. 重新安排行程](https://leetcode.cn/problems/reconstruct-itinerary/)
 ```markdown
@@ -830,7 +831,14 @@ class Solution:
         dfs("JFK")        
         return ans[::-1]
 ```
-**总结：**
-题目是【图论中的欧拉路径问题】，标准解法是【Hierholzer算法】。需领悟其中涉及的回溯思想。
+
+---
+
+## 经典例题
+
+| 题号 | 题目                                                         | 标签              |
+| -- | ---------------------------------------------------------- | --------------- |
+| 22 | [括号生成](https://leetcode.cn/problems/generate-parentheses/) | 回溯 / 组合 / 模板题   |
+| 79 | [单词搜索](https://leetcode.cn/problems/word-search/)          | 回溯 / 二维搜索 / 提升题 |
 
 ---
