--- a/_posts/01_Algorithms/2025-03-23-背包DP.md
+++ b/_posts/01_Algorithms/2025-03-23-背包DP.md
@@ -362,6 +362,7 @@ print(knapsack_unbounded(n - 1, W))  # 输出 15
 | 494  | [目标和](https://leetcode.cn/problems/target-sum/)                                              | 提升题 / 状态转移变形       |
 | 2787 | [将一个数字表示成幂的和的方案数](https://leetcode.cn/problems/ways-to-express-an-integer-as-sum-of-powers/) | 提升题 / 限制条件背包       |
 | 3685 | [含上限元素的子序列和](https://leetcode.cn/problems/subsequence-sum-after-capping-elements/)           | 综合题 / 子序列限制 / 上界处理 |
+| 474  | [一和零](https://leetcode.cn/problems/ones-and-zeroes/) | 背包 DP / 二维 0-1 背包 / 模板题 |
 
 ---
 
