--- a/_posts/01_Algorithms/2025-04-21-图论.md
+++ b/_posts/01_Algorithms/2025-04-21-图论.md
@@ -512,6 +512,131 @@ def dijkstra(graph, u):
 
 ---
 
+### 双关键字 Dijkstra
+
+常规 Dijkstra 只考虑一个权值（例如最短距离）：
+
+> 每个状态只有一个关键字：`dist[u]`
+> 小根堆中按距离升序弹出。
+
+但有些问题要求**多个优化目标**，如：
+
+| 场景       | 主目标   | 次目标   |
+| -------- | ----- | ----- |
+| 分层最短路径   | 层级最少  | 距离最短  |
+| 最少边数最短路径 | 边数最少  | 路径和最小 |
+| 城市导航     | 收费站最少 | 距离最短  |
+| 任务调度     | 时间最少  | 成本最小  |
+
+这些问题可用「双关键字 Dijkstra」解决。
+
+---
+
+**核心思想**
+
+> 将每个节点的状态定义为一个“二元组” `(primary, secondary)`，
+> 按字典序（lexicographic order）比较。
+
+---
+
+**算法流程**
+
+1️⃣ 状态定义
+
+* `dist[u] = (primary, secondary)`
+  表示从起点到 u 的最佳状态。
+
+2️⃣ 小根堆存储
+
+* 每次从堆中弹出 `(primary, secondary, node)`
+  其中比较规则为字典序。
+
+3️⃣ 松弛（更新）
+
+* 对于每条边 `u → v`，尝试更新：
+
+  ```python
+  new = (primary + 1, secondary + w)
+  if v not in dist or new < dist[v]:
+      dist[v] = new
+      heapq.heappush(pq, (new[0], new[1], v))
+  ```
+
+---
+
+**模板代码**
+
+```python
+import heapq
+
+def dijkstra_two_keys(graph, start):
+    """
+    双关键字 Dijkstra
+    graph: {u: [(v, w), ...]}
+    start: 起点
+    优先层级少的，再看路径距离
+    """
+    dist = {start: (0, 0)}  # node -> (层级, 距离)
+    pq = [(0, 0, start)]    # (层级, 距离, 节点)
+
+    while pq:
+        level, d, u = heapq.heappop(pq)
+
+        # 不写 if (level, d) > dist[u]: continue
+        # 因为状态不唯一，不能简单判断“过期”
+
+        for v, w in graph[u]:
+            new = (level + 1, d + w)
+            if v not in dist or new < dist[v]:  # 字典序比较
+                dist[v] = new
+                heapq.heappush(pq, (new[0], new[1], v))
+
+    return dist
+```
+
+不可以直接写`if (level, d) > dist[u]: continue`，因为双关键字 Dijkstra对于：
+
+* 每个节点的状态是 `(level, d)`
+* 可能存在多个路径到达同一节点 u：
+  * 层级少、距离大
+  * 层级多、距离小
+* 这两种状态都可能在后续扩展中生成更优路径
+
+如果写`if (level, d) > dist[u]: continue`，那么
+* 弹出的某个状态可能被直接丢弃
+* 导致后续无法利用这个状态生成最优路径
+* **最终结果可能不是正确的最优路径**
+
+---
+
+**与普通 Dijkstra 的区别总结**
+
+| 特征    | 普通 Dijkstra                     | 双关键字 Dijkstra |
+| ----- | ------------------------------- | ------------- |
+| 状态    | 单值 `dist[u]`                    | 二元组 `(a,b)`   |
+| 比较    | 直接数值比较                          | 字典序比较         |
+| 状态唯一性 | ✅ 唯一                            | ❌ 可能多状态       |
+| 过期判断  | ✅ 必须 `if d > dist[u]: continue` | 🚫 不能简单判断     |
+| 应用场景  | 单目标最优路径                         | 多目标优先级路径      |
+
+**可拓展到多关键字（多维 Dijkstra）**
+
+如果你需要第三关键字（比如时间、风险等），
+可扩展为三元组 `(key1, key2, key3)`，依然按字典序比较。
+例如：
+
+```python
+dist[v] = (层级, 距离, 时间)
+```
+
+比较规则仍为：
+
+```python
+if new < dist[v]:  # Python tuple自动按字典序比较
+```
+
+---
+
 ### Bellman-Ford 算法
 
 **适用**
