--- a/_posts/02_DataStructures/2024-01-21-栈与队列.md
+++ b/_posts/02_DataStructures/2024-01-21-栈与队列.md
@@ -77,7 +77,9 @@ queue.pop()           # 右边出队
 
 ### 经典例题
 
+| 题号   | 题目                                                                                           | 标签            |
+| ---- | -------------------------------------------------------------------------------------------- | ------------- |
+| 20   | [有效的括号](https://leetcode.cn/problems/valid-parentheses/)                                     | 栈 / 字符串 / 模板题 |
+| 2197 | [替换数组中的非互质数](https://leetcode.cn/problems/replace-non-coprime-numbers-in-array/description/) | 数论融合 / 提升题    |
 
-| 题号   | 题目                                                                                           | 标签                |
-| ---- | -------------------------------------------------------------------------------------------- | ----------------- |
-| 2197 | [替换数组中的非互质数](https://leetcode.cn/problems/replace-non-coprime-numbers-in-array/description/) | 数论融合 / 提升题  |
+---
