--- a/_posts/02_DataStructures/2024-01-22-单调栈.md
+++ b/_posts/02_DataStructures/2024-01-22-单调栈.md
@@ -96,5 +96,6 @@ def next_greater(nums):
 | 84   | [柱状图中最大的矩形](https://leetcode.cn/problems/largest-rectangle-in-histogram/)                    | 最大面积 / 模板题  |
 | 42   | [接雨水](https://leetcode.cn/problems/trapping-rain-water/)                                     | 双指针 / 模板题   |
 | 239  | [滑动窗口最大值](https://leetcode.cn/problems/sliding-window-maximum/)                              | 单调队列 / 滑动窗口 / 模板题 |
+| 3542 | [将所有元素变为 0 的最少操作次数](https://leetcode.cn/problems/minimum-operations-to-convert-all-elements-to-zero/) | 单调栈 / 思维题 |
 
 ---
