two dim difference array

--- a/_posts/02_DataStructures/2024-02-21-前缀和数组.md
+++ b/_posts/02_DataStructures/2024-02-21-前缀和数组.md
@@ -11,7 +11,7 @@ layout: post
 
 ---
 
-### 设计思路
+## 设计思路
 
 给定一个数组 `nums`，其前缀和数组 `prefix` 的定义如下：
 
@@ -49,7 +49,7 @@ sum(l, r) = prefix[r+1] - prefix[l]
 
 ---
 
-### Python实现
+## Python实现
 
 ```python
 # 原始数组
@@ -68,7 +68,7 @@ print(prefix[r+1] - prefix[l])  # 输出 11
 
 ---
 
-### 二维前缀和
+## 二维前缀和
 
 定义二维矩阵 `a`：
 
@@ -161,8 +161,11 @@ $$
 
 ---
 
-### 经典例题
-- [560. 和为 K 的子数组](https://leetcode.cn/problems/subarray-sum-equals-k/)
-- [303. 区域和检索 - 数组不可变](https://leetcode.cn/problems/range-sum-query-immutable/)
+## 经典例题
+
+| 题号  | 题目                                                                       | 标签              |
+| --- | ------------------------------------------------------------------------ | --------------- |
+| 303 | [区域和检索 - 数组不可变](https://leetcode.cn/problems/range-sum-query-immutable/) | 前缀和 / 模板题       |
+| 560 | [和为 K 的子数组](https://leetcode.cn/problems/subarray-sum-equals-k/)         | 前缀和 / 哈希表 / 提升题 |
 
 ---
