--- a/_posts/02_DataStructures/2024-02-22-差分数组.md
+++ b/_posts/02_DataStructures/2024-02-22-差分数组.md
@@ -11,7 +11,7 @@ layout: post
 
 ---
 
-### 设计思路
+## 设计思路
 
 考虑数组 $a=[1,3,3,5,8]$，对其中的相邻元素两两作差（右边减左边），得到数组 $[2,0,2,3]$。然后在开头补上 $a[0]$，得到差分数组：
 
@@ -51,16 +51,21 @@ $$
 
 **注:** 也可以这样理解, $d[i]$ 表示把下标 $\ge i$ 的数都加上 $d[i]$。
 
+---
+
+## 图例解析
+
+**一维差分**
+
 ![差分数组图示]({{ site.baseurl }}/assets/images/1747885435-uDDcwT-lc1094-c.png)
 
-**差分数组的常见应用：**
-* 区间加法问题
-* 模拟前缀变化
-* 一维转二维的“二维差分”技巧（用于快速处理矩形区域更新）
+**二维差分**
+
+![差分数组图示]({{ site.baseurl }}/assets/images/two_dim_chafen.png)
 
 ---
 
-### Python实现
+## Python实现
 
 ```python
 n = len(nums)
@@ -80,8 +85,12 @@ for i in range(1, n):
 
 ---
 
-### 经典例题
-- [1094. 拼车](https://leetcode.cn/problems/car-pooling/)
-- [2327. 知道秘密的人数](https://leetcode.cn/problems/number-of-people-aware-of-a-secret/)
+## 经典例题
+
+| 题号   | 题目                                                                                 | 标签                 |
+| ---- | ---------------------------------------------------------------------------------- |--------------------|
+| 1094 | [拼车](https://leetcode.cn/problems/car-pooling/)                                    | 差分数组 / 模板题         |
+| 2327 | [知道秘密的人数](https://leetcode.cn/problems/number-of-people-aware-of-a-secret/)        | 差分数组 / 前缀和 / 提升题   |
+| 2536 | [子矩阵元素加 1](https://leetcode.cn/problems/increment-submatrices-by-one/description/) | 二维差分 / 二维前缀和 / 模板题 |
 
 ---
