--- a/_posts/04_Mathematics/2024-06-21-素数.md
+++ b/_posts/04_Mathematics/2024-06-21-素数.md
@@ -9,7 +9,7 @@ layout: post
 
 素数是整数的基石，它们构成了所有自然数的“原子”。
 
-## 📌 什么是素数？
+## 什么是素数？
 
 **素数（质数）**是指大于 1 的自然数，**只能被 1 和它本身整除**。  
 常见的素数有：
@@ -21,7 +21,7 @@ layout: post
 
 ---
 
-## 🔍 如何求解素数？
+## 如何求解素数？
 
 ### 方法一：试除法（暴力）
 【常用｜需记住模板】用于判断单个数是否为素数：
@@ -78,9 +78,20 @@ for i in range(2, math.isqrt(MX) + 1):
             is_prime[j] = False  # j 是质数 i 的倍数
 ```
 
-> 为什么从 i * i 开始筛除？
-> 
-> 因为 i 之前的倍数都已经被更小的质数筛过了！
+**为什么从 `i * i` 开始筛除？**
+
+> 对于 `i` 的倍数中，小于 `i*i` 的部分都已经被比 `i` 小的质数标记过了。
+> 因此，从 `i*i` 开始可以避免重复操作，显著提高效率。
+
+以 `i = 5` 为例：
+
+`5`的倍数有：`10, 15, 20, 25, 30, ...`，但是：
+  * `10 = 2 × 5` 已经被质数 2 标记；
+  * `15 = 3 × 5` 已经被质数 3 标记；
+  * `20 = 4 × 5` 也早在处理质数 2 时被标记；
+  * 直到 `25 = 5 × 5` 才是第一次出现由 5 自己“独有”负责的倍数。
+
+所以： 从 `i*i` 开始标记，能避免重复标记之前的数，减少计算量。
 
 ---
 
@@ -128,9 +139,80 @@ for i in range(2, MX + 1):
 
 ---
 
-💡 为什么能做到每个数只被筛一次？
+**为什么能做到每个数只被筛一次？**
 
-因为每个合数 $x = p \times q$（其中 $p$ 是质数，$q$ 是某个数），只会在处理 $q$ 时被筛掉，前提是 $p \leq q$ 且 $p$ 是 $q$ 的最小质因子。这样，**每个合数只会被它的最小质因子对应的乘法筛掉一次**。
+> 因为每个合数 $x = p \times q$（其中 $p$ 是质数，$q$ 是某个数），只会在处理 $q$ 时被筛掉，前提是 $p \leq q$ 且 $p$ 是 $q$ 的最小质因子。这样，**每个合数只会被它的最小质因子对应的乘法筛掉一次**。
+>
+> `if i % p == 0: break` 的作用是：
+> 保证每个合数只由它的**最小质因子**标记一次，
+
+---
+
+举个具体例子（n = 30）
+
+我们来一步步走：
+
+第一步：`i = 2`
+
+* 当前质数表：`[2]`
+* 用 `p = 2` 标记：
+
+  ```
+  2 * 2 = 4
+  ```
+
+  标记 `4` 为合数。
+* `2 % 2 == 0` → `break`
+  ✅ 因为 2 的最小质因子是 2，本轮结束。
+
+第二步：`i = 3`
+
+* 质数表：`[2, 3]`
+* 对 p = 2：
+
+  ```
+  3 * 2 = 6
+  ```
+
+  标记 `6` 为合数。
+  `3 % 2 != 0`，继续。
+* 对 p = 3：
+
+  ```
+  3 * 3 = 9
+  ```
+
+  标记 `9` 为合数。
+  `3 % 3 == 0` → `break`
+  ✅ 因为 3 的最小质因子是 3。
+
+第三步：`i = 4`（合数）
+
+* 质数表：`[2, 3]`
+* 对 p = 2：
+
+  ```
+  4 * 2 = 8
+  ```
+
+  标记 `8` 为合数。
+  `4 % 2 == 0` → `break`
+  ✅ 因为 4 的最小质因子是 2，后面不用再试 p=3。
+
+👉 若不加 `break`，p=3 时还会标记 `12`，但 `12` 的最小质因子其实是 2，重复浪费！
+
+第四步：`i = 6`（合数）
+
+* 最小质因子是 2
+* 只用 p=2：
+
+  ```
+  6 * 2 = 12
+  ```
+
+  标记 `12`
+  然后 `6 % 2 == 0` → break
+  ✅ 所以只标记一次（被最小质因子处理）。
 
 ---
 
@@ -144,7 +226,7 @@ for i in range(2, MX + 1):
 
 ---
 
-## 🔍 质因数分解
+## 质因数分解
 
 **基本定义：**
 
