--- a/_posts/01_Algorithms/2025-03-27-区间_数位_状压DP等.md
+++ b/_posts/01_Algorithms/2025-03-27-区间_数位_状压DP等.md
@@ -9,11 +9,16 @@ layout: post
 
 
 ## 数位DP
-- [1399. 统计最大组的数目](https://leetcode.cn/problems/count-largest-group/)
-- [2843. 统计对称整数的数目](https://leetcode.cn/problems/count-symmetric-integers)
-- [2999. 统计强大整数的数目](https://leetcode.cn/problems/count-the-number-of-powerful-integers/)
-- [3352. 统计小于 N 的 K 可约简整数](https://leetcode.cn/problems/count-k-reducible-numbers-less-than-n/)
-- [3621. 位计数深度为 K 的整数数目 I](https://leetcode.cn/problems/number-of-integers-with-popcount-depth-equal-to-k-i/)
+
+| 题号   | 题目                                                                                                    | 标签            |
+| ---- | ----------------------------------------------------------------------------------------------------- | ------------- |
+| 1399 | [统计最大组的数目](https://leetcode.cn/problems/count-largest-group/)                                         | 数位和 / 枚举      |
+| 2843 | [统计对称整数的数目](https://leetcode.cn/problems/count-symmetric-integers)                                    | 数位枚举 / 回文判断   |
+| 2999 | [统计强大整数的数目](https://leetcode.cn/problems/count-the-number-of-powerful-integers/)                      | 枚举 / 区间计数     |
+| 3352 | [统计小于 N 的 K 可约简整数](https://leetcode.cn/problems/count-k-reducible-numbers-less-than-n/)               | 数位 DP / 数学    |
+| 3621 | [位计数深度为 K 的整数数目 I](https://leetcode.cn/problems/number-of-integers-with-popcount-depth-equal-to-k-i/) | 位运算 / 数位 DP   |
+| 3753 | [区间内数字的总波动值 II](https://leetcode.cn/problems/total-waviness-of-numbers-in-range-ii/)                  | 数位 DP / 波动性计数 |
+
 
 ---
 
