--- a/_posts/01_Algorithms/2025-11-14-区间处理算法技巧.md
+++ b/_posts/01_Algorithms/2025-11-14-区间处理算法技巧.md
@@ -237,5 +237,6 @@ class Solution:
 | 题号   | 题目                                                                                                   | 标签                  |
 | ---- | ---------------------------------------------------------------------------------------------------- |---------------------|
 | 3739 | [统计主要元素子数组数目 II](https://leetcode.cn/problems/count-subarrays-with-majority-element-ii/description/) | 枚举右维护左 / 有序集合 / 提升题 |
+| 3381 | [长度可被 K 整除的子数组的最大元素和](https://leetcode.cn/problems/maximum-subarray-sum-with-length-divisible-by-k/) | 前缀处理 / 枚举右维护左 / 提升题 |
 
 ---
