更新 2024-06-23-并查集.md
并查集模板代码调整

--- a/_posts/02_DataStructures/2024-06-23-并查集.md
+++ b/_posts/02_DataStructures/2024-06-23-并查集.md
@@ -46,7 +46,7 @@ layout: post
 
 **操作说明：**
 1. **初始化 `UnionFind(n)`**：
-   * 初始化父节点数组 `parent`，每个节点的父节点指向自己。
+   * 初始化父节点数组 `fa`，每个节点的父节点指向自己。
    * 初始化秩数组 `rank`，用于优化合并操作，默认为 1。
 2. **`find(x)`**：
    * 查找节点 `x` 的根节点。如果 `x` 不是根节点，就通过递归查询其父节点，同时进行路径压缩（将路径上的节点直接指向根节点）。
@@ -62,16 +62,16 @@ layout: post
 class UnionFind:
     def __init__(self, n):
         # 一开始有 n 个集合 {0}, {1}, ..., {n-1}
-        self.parent = list(range(n))  # 父节点数组
+        self.fa = list(range(n))      # 父节点数组
         self.rank = [1] * n           # 秩（Rank）是一个近似表示树的高度的值（并非精确高度）
         self.cc = n                   # 连通分量数，初始化为 n
         # self._size = [1] * n        # 集合大小
 
     def find(self, x):
         # 查找 x 的根节点，并进行路径压缩
-        if self.parent[x] != x:
-            self.parent[x] = self.find(self.parent[x])  # 路径压缩
-        return self.parent[x]
+        if self.fa[x] != x:
+            self.fa[x] = self.find(self.fa[x])  # 路径压缩
+        return self.fa[x]
 
     def union(self, x, y):
         # 按秩合并：将 x 和 y 合并
@@ -81,13 +81,13 @@ class UnionFind:
         if rootX == rootY:
             return
             
-        # 合并操作：按集合大小合并
+        # 合并操作：按秩的大小（近似树的高度）合并
         if self.rank[rootX] > self.rank[rootY]:
-            self.parent[rootY] = rootX
+            self.fa[rootY] = rootX
         elif self.rank[rootX] < self.rank[rootY]:
-            self.parent[rootX] = rootY
+            self.fa[rootX] = rootY
         else:
-            self.parent[rootY] = rootX
+            self.fa[rootY] = rootX
             self.rank[rootX] += 1
         self.cc -= 1  # 合并成功，连通分量减 1
 
